# easyinventory-api

./: .env.example  .env.test  .gitignore  Caddyfile  Dockerfile  Dockerfile.api  Makefile  README.md  deploy.sh  dev-requirements.txt  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 536f62454720_create_users_organizations_org_.py  a1b2c3d4e5f6_add_products_and_product_suppliers.py  e267a87df7b4_add_suppliers_table.py
app/: main.py
app/admin/: routes_orgs.py  routes_users.py  schemas.py  service.py
app/api/: deps.py  permissions.py
app/auth/: cognito_admin.py  cognito_token.py  deps.py  routes.py
app/bootstrap/: seed_data.py  seeder.py
app/core/: bootstrap.py  cognito.py  config.py  database.py  exceptions.py  middleware.py  roles.py
app/invites/: service.py
app/models/: __init__.py  base.py  org_membership.py  organization.py  product.py  product_supplier.py  supplier.py  user.py
app/orgs/: deps.py  permissions.py  routes.py  schemas.py  service.py
app/products/: routes.py  service.py
app/schemas/: admin.py  org.py  product.py  supplier.py  user.py
app/services/: invite_service.py  org_service.py  product_service.py  supplier_service.py  (+1 more)
docs/: EasyInventory_API_Refactoring_Plan (1).md  api-reference.md  architecture.md  cognito-setup.md  deployment-guide.md  developer-guide.md  getting-started.md  pr1  pr2  pr3  pr4  pr5  troubleshooting.md
tests/: conftest.py
testsv2/: conftest.py  factories.py
(+41 files in other folders)
